src/tests/ci/assignment_3_arrays_io_llvm/valid/05_string_char_pointer.c
int main() {
    char* text = "hello";
    return 0;
}
