src/tests/ci/assignment_3_arrays_io_llvm/invalid_semantic/08_scanf_wrong_arg_count.c
#include <stdio.h>

int main() {
    int x;
    scanf("%d %d", &x);
    return 0;
}
